# time-scheduler

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 3d8c8db87cab_add_availability_table.py  c7fe331e0f95_v2_schema_rewrite.py  d498d5ae41b6_create_employee_table.py
backend/app/: database.py  main.py
backend/app/api/: auth.py  deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  availabilities.py
backend/app/api/v2/: api.py
backend/app/api/v2/endpoints/: auth.py  demands.py
backend/app/core/: logger.py  security.py
backend/app/models/: __init__.py  availability.py  demand.py  employee.py  enums.py  schedule.py
backend/app/scheduling/: base.py
backend/app/scheduling/common/: data_prep.py
backend/app/scheduling/greedy/: strategy.py
backend/app/schemas/: availability.py  demand.py  employee.py  schedule.py
backend/tests/: conftest.py  test_auth.py  test_availabilities.py  test_scheduling_data_prep.py
frontend/: package-lock.json  package.json
frontend/src/: constants.ts  middleware.ts  types.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/auth/: AuthContainer.tsx  InputGroup.tsx
frontend/src/components/demand/: DemandActionCard.tsx  DemandCalendar.tsx  DemandDayCard.tsx
frontend/src/lib/: api.ts
(+16 files in other folders)
